<resources>
    <string name="app_name">Sound Color Code</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">FragmentMainMenu</string>
    <string name="second_fragment_label">FragmentLearn</string>
    <string name="third_fragment_label">FragmentQuiz</string>
    <string name="fourth_fragment_label">FragmentExplore</string>
    <!-- Strings used for buttons to navigate -->
    <string name="f_mm_learn">Sound Color Classic\n3 seconds</string>
    <string name="f_mm_quiz">Sound Color Classic\n10 seconds</string>
    <string name="f_mm_explore">Sound Color Achromatic</string>
    <!-- Strings used for main menu -->
    <string name="f_mm_inst">Choose a\nSound Color Code</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>