<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentMainMenu">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/f_mm_inst"
        android:textSize="40sp"
        android:gravity="center"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintBottom_toTopOf="@id/button_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_first"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/f_mm_learn"
        android:textSize="25sp"
        app:layout_constraintHeight_percent="0.19"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_first" />
    <Button
        android:id="@+id/button_second"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/f_mm_quiz"
        android:textSize="25sp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintHeight_percent="0.19"
        app:layout_constraintTop_toBottomOf="@+id/button_first"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
    <Button
        android:id="@+id/button_third"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/f_mm_explore"
        android:textSize="25sp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintHeight_percent="0.19"
        app:layout_constraintTop_toBottomOf="@+id/button_second"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>